initial version of cc site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>First cc page post.</p>
+<p>Charity Campaign is a <a href="http://nodejs.org/">node.js</a> application for competitions to help others.</p>
+
+<p>
+Here are couple of screenshots:
+
+<img src="/images/ccscreen1.jpg" /><br />
+<img src="/images/ccscreen2.jpg" /><br />
+<img src="/images/ccscreen3.jpg" /><br />
+<img src="/images/ccscreen4.jpg" /><br />
+
+</p>
+
+<p>More information is available at the <a href="http://github.com/hross/Charity-Campaign">github repository</a>.</p>
