--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Charity Campaign
+---
 <p>Charity Campaign is a <a href="http://nodejs.org/">node.js</a> application for competitions to help others.</p>
 
 <p>
