css changes, images

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: Charity Campaign
 <p>
 Here are couple of screenshots:
 
-<img src="/images/ccscreen1.jpg" /><br />
-<img src="/images/ccscreen2.jpg" /><br />
-<img src="/images/ccscreen3.jpg" /><br />
-<img src="/images/ccscreen4.jpg" /><br />
+<img src="images/ccscreen1.jpg" /><br />
+<img src="images/ccscreen2.jpg" /><br />
+<img src="images/ccscreen3.jpg" /><br />
+<img src="images/ccscreen4.jpg" /><br />
 
 </p>
 
