more edits to home

--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@ title: Charity Campaign
 ---
 <p>Charity Campaign is a <a href="http://nodejs.org/">node.js</a> application for competitions to help others.</p>
 
-<p>
-Here are couple of screenshots:
+<p>Here are couple of screenshots:</p>
 
-<img src="images/ccscreen1.jpg" /><br />
-<img src="images/ccscreen2.jpg" /><br />
-<img src="images/ccscreen3.jpg" /><br />
-<img src="images/ccscreen4.jpg" /><br />
+<img src="images/ccscreen1.jpg" />
 
-</p>
+<p>fig 1 - User Profile Screen</p>
+
+<img src="images/ccscreen2.jpg" />
+
+<p>fig 2 - Team Standings</p>
+
+<img src="images/ccscreen3.jpg" />
+
+<p>fig 3 - Add a bonus</p>
+
+<img src="images/ccscreen4.jpg" />
+
+<p>fig 4 - Home Screen</p>
+
+<br />
 
 <p>More information is available at the <a href="http://github.com/hross/Charity-Campaign">github repository</a>.</p>
